| Summary: | ASTERISK-27454: res_http_post: Don't require GMIME_MAJOR_VERSION | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2017-12-01 06:06:52.000-0600 | Date Closed: | 2017-12-04 06:55:22.000-0600 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_http_post |
| Versions: | 13.18.2 15.1.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Not all versions of gmime have the GMIME_MAJOR_VERSION define. We shouldn't require it. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-12-04 06:55:27.901-0600 Change 7403 merged by Jenkins2: res_http_post: Not all versions of gmime have GMIME_MAJOR_VERSION. [https://gerrit.asterisk.org/7403|https://gerrit.asterisk.org/7403] By: Friendly Automation (friendly-automation) 2017-12-04 07:03:25.105-0600 Change 7400 merged by Jenkins2: res_http_post: Not all versions of gmime have GMIME_MAJOR_VERSION. [https://gerrit.asterisk.org/7400|https://gerrit.asterisk.org/7400] By: Friendly Automation (friendly-automation) 2017-12-04 07:28:13.042-0600 Change 7401 merged by Jenkins2: res_http_post: Not all versions of gmime have GMIME_MAJOR_VERSION. [https://gerrit.asterisk.org/7401|https://gerrit.asterisk.org/7401] By: Friendly Automation (friendly-automation) 2017-12-04 07:41:06.478-0600 Change 7402 merged by Joshua Colp: res_http_post: Not all versions of gmime have GMIME_MAJOR_VERSION. [https://gerrit.asterisk.org/7402|https://gerrit.asterisk.org/7402] | ||